Add a basic script

--- a/main/main.html
+++ b/main/main.html
@@ -18,7 +18,7 @@
                 <label for="weightInput">Height : </label>
                 <input type="text" name="heightInput" placeholder="In centimeters">
                 <br>
-                <input type="button" name="submitBtn" value="Calculate my BMI !">
+                <input type="button" name="submitBtn" value="Calculate my BMI !" onclick="BMIcompute()">
             </form>
 
         </div>
