--- a/login/login.html
+++ b/login/login.html
@@ -19,6 +19,7 @@
 
         <a id="RegisterTxt" href="">No account ? Create one now !</a>
         <a id="Direct" href="../main/main.html">Continue without an account</a>
+        <p>Copyright PL & TL 2022</p>
     </body>
     <script src="login_script.js"></script> 
 </html>  
