--- a/login/login.html
+++ b/login/login.html
@@ -20,6 +20,7 @@
         <a id="RegisterTxt" href="">No account ? Create one now !</a>
         <a id="Direct" href="../main/main.html">Continue without an account</a>
         <p>© PL & TL 2022</p>
+        <p>All rights reserved</p>
     </body>
     <script src="login_script.js"></script> 
 </html>  
