Finished the main page

--- a/main/main.html
+++ b/main/main.html
@@ -30,7 +30,13 @@
                 <span id="computedBMI"> {{ BMI }} </span>
                 <br>
                 <span id="BMIgroup"> {{ BMIgroup }} </span>
+                <br>
+                <input type="button" value="Save my result !" id="saveBTN">
+                <br>
+                <a href="../results/results.html" id="resultLink">Find your previous results by clicking here !</a>
             </div>
+
+            
         </div>
 
 
