Added result page

--- a/results/results.html
+++ b/results/results.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="results_style.css">
     </head>
     <body>
-        <h1>WIP</h1>
+        <h1>WIP</h1> <!--this page will host the table with the results of the user-->
         
         <script src=""></script>
     </body>
