--- a/results/results.html
+++ b/results/results.html
@@ -2,13 +2,20 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Results</title>
+        <title>BMI Calculator</title>
         <link rel="stylesheet" href="results_style.css">
+        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     </head>
+    <header>
+        <h1>BMI Calculator</h1>
+        <!--Voir pour ajouter nos logos-->
+    </header>
     <body>
-        <h1>WIP</h1> <!--this page will host the table with the results of the user-->
-        
-        <script src=""></script>
+
+
     </body>
+    
+    <footer>
+        <a href="https://github.com/ThbLoth/Project">Source code</a>
+    </footer>
 </html>
