--- a/results/results.html
+++ b/results/results.html
@@ -2,16 +2,19 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>BMI Calculator</title>
+        <title>Results</title>
         <link rel="stylesheet" href="results_style.css">
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     </head>
     <header>
-        <h1>BMI Calculator</h1>
+        <h1>BMI Calculator <br>
+        Results</h1>
         <!--Voir pour ajouter nos logos-->
     </header>
     <body>
+        <div id="resultTableDiv">
 
+        </div>
 
     </body>
     
